@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - added Dice, Jaccard, tests
 
 0.003  2014-08-06 22:40:25 CEST
        - cleanup
